--- a/src/index.html
+++ b/src/index.html
@@ -212,53 +212,353 @@
         <p class="section__p">
           We can customize our cookies right for your needs. Just imagine it
         </p>
-        <!-- <article class="product__card">
-          <img
-            src="./images/product-01.png"
-            alt="product-img"
-            class="product__img"
-          />
-          <div class="prodoct__about">
-            <span class="product class">Cakes</span>
-            <p class="product_description">
-              Oatmeal cookies with golden raisins, orange zest and chocolate
-              chips
-            </p>
-            <div class="product__button">
-              <img
-                src="./images/Icon-arrow.png"
-                alt="arrow"
-                class="product__button-img"
-              />
-              <a
-                href="#"
-                class="product__button-text"
-              >
-                ORDER
-              </a>
+        <div class="products__grid">
+          <article class="product__card">
+            <img
+              src="./images/product-01.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Cakes</span>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
             </div>
-          </div>
-        </article> -->
+          </article>
+          <article class="product__card">
+            <img
+              src="./images/product-02.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Cakes</span>
+              <p class="product__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="product__card product__card-align-right">
+            <img
+              src="./images/product-03.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Donuts</span>
+              <p class="product__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="product__card product__card-align-right">
+            <img
+              src="./images/product-04.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Donuts</span>
+              <p class="product__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="./images/product-05.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Cakes</span>
+              <p class="product__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
+            </div>
+          </article>
+          <article class="product__card">
+            <img
+              src="./images/product-06.png"
+              alt="product-img"
+              class="product__img"
+            />
+            <div class="prodoct__about">
+              <span class="product__class">Cakes</span>
+              <p class="product__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <div class="product__button">
+                <img
+                  src="./images/Icon-arrow.png"
+                  alt="arrow"
+                  class="product__button-img"
+                />
+                <a
+                  href="#"
+                  class="product__button-text"
+                >
+                  ORDER
+                </a>
+              </div>
+            </div>
+          </article>
+        </div>
       </section>
       <section
         class="about-us"
         id="about-us"
       >
-        <h2>Few words About us</h2>
-      </section>
-      <section
-        class="blog"
-        id="blog"
-      >
-        <h2 class="section__title">What we bake</h2>
-      </section>
-      <section
-        class="contact-us"
-        id="contact-us"
-      >
-        <h2 class="section__title">Contact us</h2>
+        <div class="about-us__text">
+          <h2 class="about-us__text--main section__title">
+            Few words About us
+          </h2>
+          <p class="about-us__text--p">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+        </div>
+
+        <div class="about-us__stats">
+          <div class="about-us__stat">
+            <h3 class="about-us__stat-h">2015</h3>
+            <p class="about-us__stat-p">Foundation year</p>
+          </div>
+          <div class="about-us__stat">
+            <h3 class="about-us__stat-h">23</h3>
+            <p class="about-us__stat-p">Stores</p>
+          </div>
+          <div class="about-us__stat">
+            <h3 class="about-us__stat-h">155</h3>
+            <p class="about-us__stat-p">Companies</p>
+          </div>
+          <div class="about-us__stat">
+            <h3 class="about-us__stat-h">10К+</h3>
+            <p class="about-us__stat-p">Clients</p>
+          </div>
+        </div>
       </section>
     </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer class="footer">
+      <div
+        class="footer__menu"
+        id="TermsPrivacy"
+      >
+        <a
+          href="#"
+          class="footer__menu-logo"
+        >
+          <img
+            src="./images/Logo-w.png"
+            alt="LOGO"
+            class="footer__menu-logo-link"
+          />
+        </a>
+
+        <ul class="menu__nav__list">
+          <li class="footer__nav__item-w footer__contact-us-ul-w">Menu</li>
+          <li class="footer__nav__item">
+            <a
+              href="#products"
+              class="menu__nav__link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="footer__nav__item">
+            <a
+              href="#about-us"
+              class="footer__nav__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="footer__nav__item">
+            <a
+              href="#blog"
+              class="footer__nav__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="footer__nav__item">
+            <a
+              href="#TermsPrivacy"
+              class="footer__nav__link footer__nav__link--active"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__contact-us">
+        <h2 class="footer__contact-us-title section__title">Contact us</h2>
+        <ul class="footer__contact-us-calls footer__contact-us-ul">
+          <li class="footer__contact-us-call footer__contact-us-ul-w">
+            Call us
+          </li>
+          <li class="footer__contact-us-call">
+            <a
+              href="#"
+              class="footer__contact-us-call-item"
+            >
+              (629) 555-0129
+            </a>
+          </li>
+          <li class="footer__contact-us-call">
+            <a
+              href="#"
+              class="footer__contact-us-call-item"
+            >
+              (603) 555-0123
+            </a>
+          </li>
+          <li class="footer__contact-us-call">
+            <a
+              href="#"
+              class="footer__contact-us-call-item"
+            >
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+        <ul class="footer__contact-us-emails footer__contact-us-ul">
+          <li class="footer__contact-us-email footer__contact-us-ul-w">
+            Email us
+          </li>
+          <li class="footer__contact-us-email">
+            <a
+              href="#"
+              class="footer__contact-us-email-item"
+            >
+              bakerlab@example.com
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__contact-us-media" id="blog">
+        <div class="footer__contact-us-media-content">
+          <a
+            href="#"
+            class="footer__contact-us-media-content-a"
+          >
+            <div class="footer__contact-us-media-content-img-wrapper">
+              <img
+                src="./images/Icon-facebook.png"
+                alt="facebook"
+                class="footer__contact-us-media-content-img"
+              />
+            </div>
+          </a>
+          <a
+            href="#"
+            class="footer__contact-us-media-content-a"
+          >
+            <div class="footer__contact-us-media-content-img-wrapper">
+              <img
+                src="./images/Icon-instagram.png"
+                alt="facebook"
+                class="footer__contact-us-media-content-img"
+              />
+            </div>
+          </a>
+          <a
+            href="#"
+            class="footer__contact-us-media-content-a"
+          >
+            <div class="footer__contact-us-media-content-img-wrapper">
+              <img
+                src="./images/Icon-twitter.png"
+                alt="facebook"
+                class="footer__contact-us-media-content-img"
+              />
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__bakerlab">
+        <p class="footer__bakerlab-content">
+          © Bakerlab 2022
+        </p>
+      </div>
+    </footer>
     <!-- #endregion -->
   </body>
 </html>
